# Ludens

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
Core/Application/: CMakeLists.txt
Core/Application/Lib/: Application.cpp  Input.cpp  InputInternal.h
Core/Camera/: CMakeLists.txt
Core/Camera/Lib/: Camera.cpp  CameraCommon.h  CameraController.cpp
Core/Camera/Test/: CameraTest.cpp
Core/DSA/: CMakeLists.txt
Core/DSA/Lib/: Buffer.cpp
Core/DSA/Test/: DSATest.cpp  StringTest.h
Core/Gizmo/: CMakeLists.txt
Core/Gizmo/Lib/: Gizmo.cpp
Core/Header/: CMakeLists.txt
Core/Header/Benchmark/: simd.cpp
Core/Header/Test/: HeaderTest.cpp  TestGeometry.h  TestHash.h
Core/Media/: CMakeLists.txt
Core/Media/Lib/: Bitmap.cpp  Font.cpp  Model.cpp  ModelObj.h  TinygltfLoader.cpp
Core/Media/Lib/Format/: JSON.cpp  MD.cpp  XML.cpp
Core/Media/Lib/Parser/: TinygltfLoader.cpp  WAV.cpp
Core/Media/Test/: JSONTest.cpp
Core/Profiler/: CMakeLists.txt
Core/RenderBackend/: CMakeLists.txt
Core/RenderBackend/Lib/: LDShaderParser.cpp  RBackend.cpp  RBackendObj.h  RBackendVK.cpp  RFactory.cpp  RShaderCompiler.cpp  RShaderCompiler.h  RUtil.cpp  RUtil.h  RUtilInternal.h
Core/RenderBackend/Test/: RenderBackendTest.cpp
Core/RenderComponent/: CMakeLists.txt
Core/RenderComponent/Lib/: DualKawase.cpp  DualKawaseComponent.cpp  ForwardRender.cpp  ForwardRenderComponent.cpp  SceneOverlay.cpp  SceneOverlayComponent.cpp  ScreenPick.cpp  ScreenPickComponent.cpp  ScreenRender.cpp  ScreenRenderComponent.cpp  Skybox.cpp
Core/RenderComponent/Lib/Embed/: GizmoMesh.cpp
Core/RenderComponent/Lib/Layout/: PipelineLayouts.cpp  RMesh.cpp  SetLayouts.cpp
Core/RenderComponent/Lib/Pipeline/: EquirectangularPipeline.cpp  LinePipeline.cpp  OutlinePipeline.cpp  RMeshPipeline.cpp  SkyboxPipeline.cpp
Core/RenderServer/: CMakeLists.txt
Core/RenderServer/Lib/: RServer.cpp
Core/Serial/: CMakeLists.txt
Core/Serial/Lib/: Compress.cpp  Serial.cpp
Core/Serial/Lib/Format/: JSON.cpp
Core/Serial/Test/: SerialJSONTest.cpp  SerialTest.cpp  TestCompression.h
Core/System/: CMakeLists.txt
Core/System/Lib/: Allocator.cpp  FileSystem.cpp  FileWatcherWin32.cpp  Memory.cpp  Timer.cpp
Core/System/Test/: SystemTest.cpp
Core/UI/: CMakeLists.txt
Core/UI/Lib/: UI.cpp  UIContext.cpp  UIObj.h  UIWidget.cpp  UIWindow.cpp  UIWindowManager.cpp
Core/UI/Test/: UITest.cpp
Core/UIF/: CMakeLists.txt
Core/UIF/Lib/: UIFTheme.cpp  UIFWidget.cpp  UIFWidgetObj.h  UIFWindow.cpp  UIFWindowManager.cpp
LDBuilder/: CMakeLists.txt
LDBuilder/AssetBuilder/: CMakeLists.txt
LDBuilder/AssetBuilder/Lib/: AssetBuilder.cpp  AssetBuilderLibDef.h  AssetBuilderMeta.cpp  AssetBuilderMeta.h  AssetImportInfo.cpp  AssetImportInfoStorage.cpp  AssetImportJob.cpp  AssetImportJob.h  AssetImporter.cpp
LDBuilder/AssetBuilder/Lib/AssetSource/: AudioAssetSource.cpp  TextureAssetSource.cpp
LDBuilder/AssetBuilder/Lib/AssetState/: AudioClipAssetState.cpp  BlobAssetState.cpp  FontAssetState.cpp  LuaScriptAssetState.cpp  MeshAssetState.cpp  Texture2DAssetState.cpp  TextureCubeAssetState.cpp  UITemplateAssetState.cpp
LDBuilder/AssetBuilder/Lib/AssetType/: AudioClipAssetBuilder.cpp  BlobAssetBuilder.cpp  FontAssetBuilder.cpp  LuaScriptAssetBuilder.cpp  MeshAssetBuilder.cpp  Texture2DAssetBuilder.cpp  TextureCubeAssetBuilder.cpp  (+1 more)
LDBuilder/AssetUtil/: CMakeLists.txt
LDBuilder/AssetUtil/Lib/: AssetUtil.cpp
LDBuilder/AudioUtil/: CMakeLists.txt
LDBuilder/AudioUtil/Lib/: AudioUtil.cpp
LDBuilder/BAssetUtil/: CMakeLists.txt
LDBuilder/BAssetUtil/Lib/: BAssetUtil.cpp
LDBuilder/BDocumentCompiler/: CMakeLists.txt
LDBuilder/BDocumentCompiler/Lib/: BDocumentCompiler.cpp
LDBuilder/BuilderMain/: CMakeLists.txt
LDBuilder/BuilderMain/Lib/: BuilderMain.cpp  FileTest.cpp  FileTest.h  Main.cpp  RunTests.h
LDBuilder/Document/: CMakeLists.txt
LDBuilder/Document/Lib/: Document.cpp  DocumentBuilder.cpp
LDBuilder/DocumentBuilder/: CMakeLists.txt
LDBuilder/DocumentBuilder/Lib/: Document.cpp  DocumentBuilder.cpp  DocumentRegistry.cpp  DocumentURI.cpp
LDBuilder/DocumentBuilder/Test/: DocumentBuilderTest.cpp  DocumentBuilderTest.h  DocumentItemTest.cpp  DocumentRegistryTest.cpp  DocumentSpanTest.cpp  DocumentTest.cpp  DocumentURITest.cpp
LDBuilder/DocumentCompiler/: CMakeLists.txt
LDBuilder/DocumentCompiler/Lib/: DocumentCompiler.cpp
LDBuilder/Main/: AudioUtil.cpp  Main.cpp  MeshUtil.cpp  RenderUtil.cpp  RunTests.cpp
LDBuilder/MeshUtil/: CMakeLists.txt
LDBuilder/MeshUtil/Lib/: MeshUtil.cpp
LDBuilder/ProjectBuilder/: CMakeLists.txt
LDBuilder/ProjectBuilder/Lib/: ProjectBuilder.cpp  ProjectScan.cpp
LDBuilder/RenderUtil/: CMakeLists.txt
LDBuilder/RenderUtil/Lib/: RenderUtil.cpp
LDBuilder/Win32Util/: CMakeLists.txt
LDBuilder/Win32Util/Lib/: Win32Util.cpp
LDCore/Asset/: CMakeLists.txt
LDCore/Asset/Lib/: AssetLoadJob.h  AssetManager.cpp  AssetMeta.cpp  AssetMeta.h  AssetObj.h  AssetRegistry.cpp  AssetSchema.cpp  AssetSchemaKeys.h  AssetWatcher.cpp  AssetWatcher.h  LuaScriptAsset.cpp  MeshAsset.cpp  TextureAsset.cpp
LDCore/Asset/Test/: AssetRegistryTest.cpp  UITemplateTest.cpp
LDCore/AudioBackend/: CMakeLists.txt
LDCore/AudioBackend/Lib/: AudioBackend.cpp  MiniAudio.cpp
LDCore/AudioBackend/Test/: MiniAudioTest.cpp
LDCore/AudioMixer/: CMakeLists.txt
LDCore/AudioMixer/Lib/: AudioBuffer.cpp  AudioCommand.cpp  AudioEffect.cpp  AudioMixer.cpp  AudioPlayback.cpp  AudioPlaybackObj.h
LDCore/AudioMixer/Sandbox/: AudioMixerSandbox.cpp
LDCore/AudioMixer/Test/: AudioMixerReadbackTest.cpp  AudioMixerTest.cpp  AudioMixerTest.h
LDCore/AudioServer/: CMakeLists.txt
LDCore/AudioServer/Lib/: AudioServer.cpp
LDCore/AudioSystem/: CMakeLists.txt
LDCore/AudioSystem/Lib/: AudioSystem.cpp
LDCore/Camera/: CMakeLists.txt
LDCore/Camera/Lib/: Camera.cpp  Camera2D.cpp  Camera2DController.cpp  CameraController.cpp
LDCore/Camera/Test/: Camera2DTest.cpp  OrthographicTest.cpp  PerspectiveTest.cpp  TestOrthographic.h  TestPerspective.h
Scripts/: Embed.py  (+2 more)
(+1286 files in other folders)
